namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-stats-web-analytics-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-stats-web-analytics-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "data-platform-application-migration-support"
    cloud-platform.justice.gov.uk/application: "Statistics Web Analytics"
    cloud-platform.justice.gov.uk/owner: "statistics dissemination team: "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/stats-web-analytics"
    cloud-platform.justice.gov.uk/team-name: "stats-web-analytics-admin"
    cloud-platform.justice.gov.uk/review-after: ""
